# shran

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/: pull_request_template.md
.github/workflows/: rust.yml
example_builds/: build.yml
src/: cli.rs  error.rs  main.rs
src/cli/: commands.rs  mod.rs  shran_cli.rs
src/config/: default.rs  fs_manager.rs  mod.rs
src/github/: mod.rs  releases.rs
src/strategies/: bitcoin.rs
src/strategy/: bitcoin.rs  mod.rs
src/utils/: archive.rs  fs_manager.rs  manifest_manager.rs  misc_serde.rs  mod.rs
