[package]
name = "shran"
version = "0.1.0"
authors = ["Matt Williams matt.k.williams@protonmail.com"]
edition = "2018"
description = "A command line tool for automating the process of building and deploying a Bitcoin node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["cargo", "wrap_help"] }
ansi_term = "0.12.1"
octocrab = "0.13.0"
indicatif = "0.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.23"
thiserror = "1.0.30"
